--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -26,6 +26,8 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: white;
+    font-family: Roboto-Regular, serif;
+    font-size: 14px;
 }
 
 .list-default {
@@ -92,7 +94,7 @@ nav {
 .logo h6 {
     padding: 0;
     margin: 0 0 0 10px;
-    font-size: 12px;
+    font-size: 14px !important;
     font-family: Roboto-Bold, serif;
 }
 /* navigation panel style end *************************************************************************************** */
