--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                     <div class="col-12 user-info d-flex align-items-center">
                         <i class="bi bi-person-circle" style="font-size: 70px; color: #8E91AB"></i>
                         <div class="d-flex flex-column w-100 m-3">
-                            <h6 class="p-0 m-0">
+                            <h6 class="p-0 m-0" style="font-size: 16px;">
                                 <nobr
                                     th:text="${
                                         AuthUser.getSurname() + ' ' +
