--- a/src/main/resources/templates/settings/settings-change-address.html
+++ b/src/main/resources/templates/settings/settings-change-address.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/select2/css/select2-bootstrap.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/plugins/data-tables/DataTables-1.13.5/css/dataTables.bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
@@ -19,26 +18,22 @@
 
         <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/address')}"></div>
 
-        <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>
-
-        <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
-            Действие успешно выполненно.
-        </div>
-
-        <div class="card default-shadow mt-4">
+        <div class="card bg-color-light-blue default-shadow mt-4">
             <div class="card-header">Создание нового адреса (здания СФР)</div>
             <div class="card-body card-body-custom">
                 <div class="alert alert-info mt-1" role="alert">
-                    Для создания нового адреса выберите населенный пункт из списка ниже,
+                    Для изменения нового адреса выберите населенный пункт из списка ниже,
                     введите улицу (в формате ул.Xхххххх, ул.Xxx-xxx, ул.Xxx xxx) и номер дома (например: 99) <br>
-                    <small class="text-danger">Если вашего населенного пункта нет в списке, обратитесь к разработчику.</small>
+                    Если вашего населенного пункта нет в списке, обратитесь к разработчику.<br>
+                    <small class="text-danger">Имейте ввиду что адрес поменяется у всего (Устройств, расходников и пользователей зарегестрированных по нему)</small>
                 </div>
 <!--                th:object="${}"-->
-                <form th:method="post" action="/settings/address/save" th:object="${NewAddress}">
+                <form th:method="post" action="/settings/address/change" th:object="${Address}">
                     <div class="row">
                         <div class="col-12 col-lg-6">
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label for="settlements">Населенный пункт</label>
+                                <input type="hidden" th:field="*{id}">
+                                <label class="text-white" for="settlements">Населенный пункт</label>
 <!--                                <small class="form-text text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Ошибка</small>-->
                                 <select id="settlements" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{settlements}">
                                     <option th:value="${settlement.getId()}" th:each="settlement: ${AllSettlements}"
@@ -52,52 +47,22 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label for="street">Улица</label>
-                                <small class="form-text text-danger" th:if="${#fields.hasErrors('street')}" th:errors="*{street}">Ошибка</small>
+                                <label class="text-white" for="street">Улица</label>
+<!--                                <small class="form-text text-danger" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">Ошибка</small>-->
                                 <input id="street" class="form-control" type="text" th:field="*{street}">
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label for="house">Дом</label>
-                                <small class="form-text text-danger" th:if="${#fields.hasErrors('house')}" th:errors="*{house}">Ошибка</small>
+                                <label class="text-white" for="house">Дом</label>
+                                <!--                                <small class="form-text text-danger" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">Ошибка</small>-->
                                 <input id="house" class="form-control" type="text" th:field="*{house}">
                             </div>
                         </div>
                         <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary" type="submit">Добавить</button>
+                            <a class="btn btn-outline-light mx-2" href="/settings/address">Назад</a>
+                            <button class="btn btn-primary" type="submit">Изменить</button>
                         </div>
                     </div>
                 </form>
-            </div>
-        </div>
-
-        <div class="card default-shadow mt-4">
-            <div class="card-header">Все адреса (Здания СФР)</div>
-            <div class="card-body table-responsive">
-                <table id="tableAddress" class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">Район</th>
-                        <th scope="col">Населенный пункт</th>
-                        <th scope="col">Улица</th>
-                        <th scope="col">Дом</th>
-                        <th scope="col">Действия</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="address: ${AllAddress}">
-                        <td th:text="${address.getSettlements().getRegion().getName()}">1</td>
-                        <td th:text="${address.getSettlements().getType() + ' ' + address.getSettlements().getName()}">1</td>
-                        <td th:text="${address.getStreet()}">1</td>
-                        <td th:text="${address.getHouse()}">1</td>
-                        <td class="d-flex ">
-                            <a class="btn btn-primary mx-2" th:href="'/settings/address/' + ${address.getId()}">Изменить</a>
-                            <form th:method="post" th:action="'/settings/address/delete/' + ${address.getId()}">
-                                <button type="submit" class="btn btn-danger" title="Удаление адреса может привести к потере данных!">Удалить</button>
-                            </form>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
@@ -105,21 +70,10 @@
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/select2/js/select2.min.js}"></script>
-<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/jquery.dataTables.js}"></script>
-<script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/dataTables.bootstrap5.js}"></script>
 <script>
     $(document).ready(function() {
         $('.js-example-basic-single').select2({
             theme: "bootstrap"
-        });
-        $('#tableAddress').DataTable({
-            // dom: 'Blfrtip',
-            // buttons: [
-            //     'excel'
-            // ],
-            language: {
-                url: '/plugins/data-tables/ru.json'
-            }
         });
     });
 </script>
