--- a/src/main/resources/templates/settings/settings-change-users.html
+++ b/src/main/resources/templates/settings/settings-change-users.html
@@ -2,6 +2,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учет ВТ</title>
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
@@ -12,7 +13,7 @@
 <nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки пользователя')}"></div>
+        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки')}"></div>
 
         <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/users')}"></div>
 
@@ -45,10 +46,11 @@
                                 <select id="user-address-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{address}">
                                     <option th:each="address : ${AllAddress}" th:value="${address.getId()}"
                                             th:text="${
-                                        address.getCity().getName() + ' ' +
-                                        address.getStreet() + ' ' +
-                                        address.getHouse()  + ' (' +
-                                        address.getRegion().getName() + ')'
+                                                address.getSettlements().getType() + ' ' +
+                                                address.getSettlements().getName() + ' ' +
+                                                address.getStreet() + ' ' +
+                                                address.getHouse()  + ' (' +
+                                                address.getSettlements().getRegion().getName() + ')'
                                     }"></option>
                                 </select>
                             </div>
@@ -77,8 +79,11 @@
                                 <input id="user-middle-name-change" class="form-control" type="text" th:field="*{middleName}">
                             </div>
                         </div>
+                        <div class="d-flex justify-content-end">
+                            <a class="btn btn-outline-light mx-2" href="/settings/users">Назад</a>
+                            <button class="btn btn-primary" type="submit">Изменить</button>
+                        </div>
 
-                        <button class="btn btn-primary" type="submit">Изменить</button>
                     </div>
                 </form>
             </div>
