--- a/src/main/resources/templates/settings/settings-user.html
+++ b/src/main/resources/templates/settings/settings-user.html
@@ -2,6 +2,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Учет ВТ</title>
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-5.3.0/css/bootstrap.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
@@ -14,7 +15,7 @@
 <nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки пользователя')}"></div>
+        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки')}"></div>
 
         <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/users')}"></div>
 
@@ -26,10 +27,10 @@
             Действие успешно выполненно.
         </div>
 
-        <div class="card bg-color-light-blue default-shadow mt-4">
+        <div class="card default-shadow mt-4">
             <div class="card-header">Личные настройки</div>
             <div class="card-body card-body-custom">
-                <div class="alert alert-info mt-4" role="alert">
+                <div class="alert alert-info mt-1" role="alert">
                     Для изменения личных данных измените данные в соответсвующих полях, оставив поле "Пароль" пустым. <br>
                     Для изменения пароля внесите изменения в его поле. Помните что длинна пароля должна составлять минимум 6 символов. <br>
                     Логин поменять нельзя!
@@ -40,17 +41,17 @@
                             <input type="hidden" th:field="*{id}">
                             <input class="form-control" type="hidden" th:field="*{login}">
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-login-change">Логин</label>
+                                <label for="user-login-change">Логин</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Ошибка</small>
                                 <input id="user-login-change" class="form-control" type="text" th:field="*{login}" disabled>
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-password-change">Пароль</label>
+                                <label for="user-password-change">Пароль</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Ошибка</small>
                                 <input id="user-password-change" class="form-control" type="password" autocomplete="new-password" th:field="*{password}">
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-address-change">Адрес</label>
+                                <label for="user-address-change">Адрес</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Ошибка</small>
                                 <select id="user-address-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{address}">
                                     <option th:each="address : ${AllAddress}" th:value="${address.getId()}"
@@ -64,7 +65,7 @@
                                 </select>
                             </div>
                             <div sec:authorize="${hasAnyRole('Admin')}" class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-role-change">Роль</label>
+                                <label for="user-role-change">Роль</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}">Ошибка</small>
                                 <select id="user-role-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{role}">
                                     <option th:each="role : ${AllRoles}" th:value="${role.getId()}" th:text="${role.getDescription()}"></option>
@@ -73,17 +74,17 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-surname-change">Фамилия</label>
+                                <label for="user-surname-change">Фамилия</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Ошибка</small>
                                 <input id="user-surname-change" class="form-control" type="text" th:field="*{surname}">
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-name-change">Имя</label>
+                                <label for="user-name-change">Имя</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка</small>
                                 <input id="user-name-change" class="form-control" type="text" th:field="*{name}">
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label class="text-white" for="user-middle-name-change">Отчество</label>
+                                <label for="user-middle-name-change">Отчество</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('middleName')}" th:errors="*{middleName}">Ошибка</small>
                                 <input id="user-middle-name-change" class="form-control" type="text" th:field="*{middleName}">
                             </div>
@@ -98,7 +99,7 @@
         <div class="card default-shadow mt-4">
             <div class="card-header">Создание пользователя</div>
             <div class="card-body card-body-custom">
-                <div class="alert alert-info mt-4" role="alert">
+                <div class="alert alert-info mt-1" role="alert">
                     Для создания пользователя выберите из списка доменное имя сотрудника, введите пароль не короче 6 символов, укажите адрес и роль пользователя.<br>
                     В случае если после выбора доменного имени, поля: "Фамилия", "Имя", "Отчество" не заполнились автоматически, введите их вручную.
                 </div>
@@ -166,7 +167,7 @@
 
         <div class="card default-shadow mt-4">
             <div class="card-header">Все пользователи</div>
-            <div class="card-body card-body-custom">
+            <div class="card-body card-body-custom table-responsive">
                 <table id="tableUser" class="table">
                     <thead>
                     <tr>
