--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,6 +37,10 @@
                     <p th:if="${error}" class="text-danger mb-0 mt-4" >Не верный логин или пароль</p>
                     <p th:if="${logout}" class="text-success mb-0 mt-4">Вы вышли из программы</p>
                 </div>
+
+                <div class="d-flex flex-column justify-content-center align-items-center w-100">
+                    <p class="mb-0 mt-4">version 2.0.0</p>
+                </div>
             </form>
         </div>
     </div>
