--- a/src/main/resources/templates/settings/settings-address.html
+++ b/src/main/resources/templates/settings/settings-address.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
             Действие успешно выполненно.
         </div>
 
-        <div class="card default-shadow mt-4">
+        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
             <div class="card-header">Создание нового адреса (здания СФР)</div>
             <div class="card-body card-body-custom">
                 <div class="alert alert-info mt-1" role="alert">
@@ -80,7 +80,7 @@
                         <th scope="col">Населенный пункт</th>
                         <th scope="col">Улица</th>
                         <th scope="col">Дом</th>
-                        <th scope="col">Действия</th>
+                        <th sec:authorize="${hasAnyRole('Admin')}" scope="col">Действия</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -89,7 +89,7 @@
                         <td th:text="${address.getSettlements().getType() + ' ' + address.getSettlements().getName()}">1</td>
                         <td th:text="${address.getStreet()}">1</td>
                         <td th:text="${address.getHouse()}">1</td>
-                        <td class="d-flex ">
+                        <td sec:authorize="${hasAnyRole('Admin')}" class="d-flex ">
                             <a class="btn btn-primary mx-2" th:href="'/settings/address/' + ${address.getId()}">Изменить</a>
                             <form th:method="post" th:action="'/settings/address/delete/' + ${address.getId()}">
                                 <button type="submit" class="btn btn-danger" title="Удаление адреса может привести к потере данных!">Удалить</button>
