--- a/src/main/resources/templates/devices/new-device.html
+++ b/src/main/resources/templates/devices/new-device.html
@@ -22,7 +22,7 @@
             <div class="card-body card-body-custom">
                 <div class="alert alert-info mt-1" role="alert">
                     <h6 class="text-danger m-0 p-0">Внимание !</h6>
-                    <p> Помните что устройства должны быть добавлены все по отдельности ! Например, если у вас комплект под одним инвентарным номером, то вы добавляете 2 разных устройства и ставите им одинаковый инвентарный номер</p>
+                    <p> Помните что устройства должны быть добавлены все по отдельности ! Например, если у вас комплект из 2 устройств под одним инвентарным номером, то вы добавляете 2 разных устройства и ставите им одинаковый инвентарный номер</p>
                     <p> В программе не может существовать устройства у которого тип устройства и инвентарный номер совпадают с уже добавленными!</p>
                 </div>
 <!--                <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>-->
