--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="card bg-color-light-blue default-shadow mt-4">
+            <div class="card bg-color-light-blue default-shadow mt-4 d-none">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12 col-md-2 main-col">
