--- a/src/main/resources/templates/fragments/sidebar-fragment.html
+++ b/src/main/resources/templates/fragments/sidebar-fragment.html
@@ -37,12 +37,12 @@
 <!--                    <p>История</p>-->
 <!--                </a>-->
 <!--            </li>-->
-<!--            <li th:classappend="${active == '/info'} ? 'active'">-->
-<!--                <a class="link-item" href="/info/home">-->
-<!--                    <i class="bi bi-info-circle" style="font-size: 1.4rem; color: white;"></i>-->
-<!--                    <p>Информация</p>-->
-<!--                </a>-->
-<!--            </li>-->
+            <li th:classappend="${active == '/info'} ? 'active'">
+                <a class="link-item" href="/info/home">
+                    <i class="bi bi-info-circle" style="font-size: 1.4rem; color: white;"></i>
+                    <p>Информация</p>
+                </a>
+            </li>
             <li th:classappend="${active == '/settings'} ? 'active'">
                 <a class="link-item" href="/settings/users">
                     <i class="bi bi-gear" style="font-size: 1.4rem; color: white;"></i>
