--- a/src/main/resources/templates/info/info-home.html
+++ b/src/main/resources/templates/info/info-home.html
@@ -22,27 +22,47 @@
             <div class="alert alert-info">
                 <h5>v.2.0.0</h5>
                 <ol>
-                    <li>Обновленно
+                    <li>Обновленно:</li>
+                    <ol>
+                        <li>Полностью переработан внешний вид</li>
+                        <li>Улучшено взаимодействие с программой с учетом рекомендаций пользователей</li>
+                        <li>Авторизация:</li>
                         <ol>
-                            <li>sdfdsf</li>
-                            <li>sdfdsf</li>
+                            <li>Логины при входе в программу теперь можно не запоминать, а искать и выбирать их.</li>
+                            <li>Логином будет являться имя доменной учетной записи</li>
+                            <li>Cессия в программе будет длиннее. (Реже теперь будет необходимо вводить логин и пароль)</li>
                         </ol>
-                    </li>
-                </ol>
-                <ol>
-                    <li>Обновленно
+                        <li>Главная страница:</li>
                         <ol>
-                            <li>asdasd</li>
+                            <li>Cтраница более не является функциональной, теперь она информационная.</li>
+                            <li>Теперь на главной странице указана небольшая информация о сотруднике</li>
                         </ol>
-                    </li>
-                </ol>
-                <h5>v.2.0.0</h5>
-                <ol>
-                    <li>Обновленно
+                        <li>Взаимодействие с устройствами:</li>
                         <ol>
-                            <li>sdfdsfsdf</li>
+                            <li>Добавленна сортировка для каждого столбца таблиц</li>
+                            <li>Поиск теперь работает по всем параметрам таблиц (с помощью него можно теперь сортировать данные и выгружать их в Excel)</li>
+                            <li>Теперь производители устройств будут едины. Их придется выбирать, а не писать самостоятельно (Не будет того, что кто-то написал Aquarius, а кто-то AQUARIUS ну и самое забавное Aguarius)</li>
+                            <li>Cтатусы перерабоаны. Теперь в программе имеются все необходимые для этого статусы.</li>
+                            <li>Убран промежуточный этап просмотра информации об устройстве. Теперь редактирование доступно сразу.</li>
+                            <li>В описании устройства убрано поле "Ответсвенный" просто за ненадобностью.</li>
                         </ol>
-                    </li>
+                        <li>Работа с адресами:</li>
+                        <ol>
+                            <li>Переработана логика адресов (зарегистрированных зданий). Все адреса теперь имеют район, населенный пункт, улицу и дом. Без всяких сокращенных названий</li>
+                        </ol>
+                        <li>Работа с пользователями:</li>
+                        <ol>
+                            <li>Добавлена возможность редактирования пользователей (как для администраторам, так и самим пользователям(с ограничениями))</li>
+                            <li>Добавлена возможность удаления пользователей (только администраторам)</li>
+                            <li>Все пользователи могут просматривать кто зарегистрированн в программе, но изменять могут только администраторы</li>
+                            <li>Cессия в программе будет длиннее. (Реже теперь будет необходимо вводить логин и пароль)</li>
+                        </ol>
+                        <li>Другое:</li>
+                        <ol>
+                            <li>У программы появилась версионность. Версия указанна на страница авторизации и на вкладке "Информация".</li>
+                            <li>Добавлена страница "Информация". На ней можно будет узнать о текущей версии программы и о списках изменений.</li>
+                        </ol>
+                    </ol>
                 </ol>
             </div>
         </div>
