--- a/src/main/resources/templates/devices/all-devices.html
+++ b/src/main/resources/templates/devices/all-devices.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-icons-1.10.5/font/bootstrap-icons.css}">
     <link rel="stylesheet" th:href="@{/plugins/select2/css/select2.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/plugins/data-tables/DataTables-1.13.5/css/dataTables.bootstrap.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/plugins/data-tables/Buttons-2.4.1/css/buttons.bootstrap.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
@@ -52,13 +53,22 @@
 <script type="text/javascript" th:src="@{/plugins/jquery/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/jquery.dataTables.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/data-tables/DataTables-1.13.5/js/dataTables.bootstrap5.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/JSZip-3.10.1/jszip.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/Buttons-2.4.1/js/dataTables.buttons.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/Buttons-2.4.1/js/buttons.bootstrap5.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/data-tables/Buttons-2.4.1/js/buttons.html5.js}"></script>
 <script>
     $(document).ready(function() {
 
         let table = $('#tableDevice').DataTable({
+            pageLength: 30,
             language: {
                 url: '/plugins/data-tables/ru.json'
             },
+            dom: 'Bfrtip',
+            buttons: [
+                'excel'
+            ],
             ajax: {
                 contentType: 'application/json',
                 url: '/api/v1/devices/get/all',
