--- a/src/main/resources/templates/devices/new-device.html
+++ b/src/main/resources/templates/devices/new-device.html
@@ -15,21 +15,21 @@
 <nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/devices')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Все устройства')}"></div>
+        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Добавление нового устройства')}"></div>
         <div th:replace="~{/fragments/devices-tabs.html::devices-tabs('/new')}"></div>
         <div class="card default-shadow mt-4">
             <div class="card-header">Данные нового устройства</div>
             <div class="card-body card-body-custom">
+                <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>
+
+                <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
+                    Действие успешно выполненно.
+                </div>
                 <div class="alert alert-info mt-1" role="alert">
                     <h6 class="text-danger m-0 p-0">Внимание !</h6>
                     <p> Помните что устройства должны быть добавлены все по отдельности ! Например, если у вас комплект из 2 устройств под одним инвентарным номером, то вы добавляете 2 разных устройства и ставите им одинаковый инвентарный номер</p>
                     <p> В программе не может существовать устройства у которого тип устройства и инвентарный номер совпадают с уже добавленными!</p>
                 </div>
-<!--                <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>-->
-
-<!--                <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">-->
-<!--                    Действие успешно выполненно.-->
-<!--                </div>-->
 <!--                <form th:method="post" th:action="'/devices/change/'" th:object="${}">-->
 
 <!--                </form>-->
@@ -75,7 +75,7 @@
                                 </select>
                             </div>
                             <div class="input-form-group d-flex justify-content-between flex-column mb-4">
-                                <label for="device-status-change">статус</label>
+                                <label for="device-status-change">Статус</label>
                                 <small class="form-text text-danger" th:if="${#fields.hasErrors('status')}" th:errors="*{status}">Ошибка</small>
                                 <select id="device-status-change" class="js-example-basic-single form-control" style="width: 100% !important;" th:field="*{status}">
                                     <option value="0">Не указано ...</option>
