--- a/src/main/resources/templates/fragments/sidebar-fragment.html
+++ b/src/main/resources/templates/fragments/sidebar-fragment.html
@@ -31,7 +31,7 @@
 <!--                    <p>Документы</p>-->
 <!--                </a>-->
 <!--            </li>-->
-<!--            <li th:classappend="${active == '/history'} ? 'active'">-->
+<!--            <li sec:authorize="${hasAnyRole('Admin')}" th:classappend="${active == '/history'} ? 'active'">-->
 <!--                <a class="link-item disabled" href="/history/home">-->
 <!--                    <i class="bi bi-clock-history" style="font-size: 1.4rem; color: white;"></i>-->
 <!--                    <p>История</p>-->
