--- a/src/main/resources/templates/settings/settings-address.html
+++ b/src/main/resources/templates/settings/settings-address.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
+<nav th:replace="~{fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки')}"></div>
+        <div th:replace="~{fragments/header-title-fragment.html::header-title('Настройки')}"></div>
 
-        <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/address')}"></div>
+        <div th:replace="~{fragments/settings-tabs.html::settings-tabs('/address')}"></div>
 
         <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}"></div>
 
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary" type="submit">Добавить</button>
+                            <button class="btn btn-success" type="submit">Добавить</button>
                         </div>
                     </div>
                 </form>
