--- a/src/main/resources/templates/settings/settings-devices.html
+++ b/src/main/resources/templates/settings/settings-devices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,50 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<nav th:replace="~{/fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
+<nav th:replace="~{fragments/sidebar-fragment.html::sidebar('/settings')}" ></nav>
 <main id="content-main">
     <div class="container-fluid">
-        <div th:replace="~{/fragments/header-title-fragment.html::header-title('Настройки')}"></div>
+        <div th:replace="~{fragments/header-title-fragment.html::header-title('Настройки')}"></div>
 
-        <div th:replace="~{/fragments/settings-tabs.html::settings-tabs('/devices')}"></div>
+        <div th:replace="~{fragments/settings-tabs.html::settings-tabs('/devices')}"></div>
+
+        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
+            <div class="card-header">
+                Добавление нового типа устройств
+            </div>
+            <div class="card-body">
+                <div class="alert alert-info mt-1" role="alert">
+                    Перед добавлением переговорите с начальством.
+                </div>
+                <div th:if="${Error != ''}" class="alert alert-danger mt-4" role="alert" th:text="${Error}">
+
+                </div>
+
+                <div th:if="${Successfully}" class="alert alert-success mt-4" role="alert">
+                    Действие успешно выполненно.
+                </div>
+                <form th:method="post" action="/settings/devices/type/new" th:object="${NewType}">
+                    <div class="input-form-group d-flex justify-content-between flex-column mb-4">
+                        <label class="text-white" for="house">Имя типа</label>
+                        <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Ошибка</small>
+                        <input id="house" class="form-control" type="text" placeholder="Например: МФУ" th:field="*{name}">
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="btn btn-success">Добавить</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div sec:authorize="${hasAnyRole('Admin')}" class="card default-shadow mt-4">
+            <div class="card-header">
+                Добавление нового производителя устройств
+            </div>
+            <div class="card-body">
+                <div class="alert alert-info mt-1" role="alert">
+                    Перед добавлением убедитесь что данный производитель существует и написан верно!
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 <script type="text/javascript" th:src="@{/plugins/bootstrap-5.3.0/js/bootstrap.bundle.js}"></script>
